minikube/ingress.yaml
apiVersion: networking.k8s.io/v1   
kind: Ingress   
metadata:
  name: example-ingress   
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1   
    kubernetes.io/ingress.class: "nginx"
spec:   
  rules:   
    - host: api.local  
      http:   
        paths:   
          - path: /hello/   
            pathType: Prefix   
            backend:   
              service:   
                name: web   
                port:   
                  number: 8080
          - path: /api-v1/   
            pathType: Prefix   
            backend:   
              service:   
                name: quarkus-ms-v1-service   
                port:   
                  number: 8080
